<resources>
    <string name="app_name">EjemploFirebase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="firebase_login">Firebase Login</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="confirmar_registro">Confirmar Registro</string>
    <string name="completa_tus_datos">Completa tus datos</string>
    <string name="nombre">Nombre</string>
    <string name="ingrese_email">Ingrese Email</string>
    <string name="ingrese_rut_sin_puntos">Ingrese Rut sin puntos</string>
    <string name="ingrese_nombre">Ingrese Nombre</string>
    <string name="volver">Volver</string>
    <string name="ingrese_password">Ingrese Password</string>
    <string name="repite_password">Repite Password</string>
</resources>